objects/pse__Resource_Transmission__c.object
<CustomObject>
    <customHelpPage>pse__ResourceTransmissionHelp</customHelpPage>
    <description>Stores the transmission status and ID for each resource in a timecard transmission between a third-party application and PSA.</description>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Resource ID.</description>
        <inlineHelpText>The Resource ID.</inlineHelpText>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Transmissions</relationshipLabel>
        <relationshipName>Resource_Transmissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>Shows Complete if all requested timecard data has been returned. Otherwise, shows Pending.</description>
        <inlineHelpText>Shows Complete if all requested timecard data has been returned. Otherwise, shows Pending.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Timecard_Transmission__c</fullName>
        <description>The Timecard Transmission ID.</description>
        <inlineHelpText>The Timecard Transmission ID.</inlineHelpText>
        <label>Timecard Transmission</label>
        <referenceTo>pse__Timecard_Transmission__c</referenceTo>
        <relationshipLabel>Resource Transmissions</relationshipLabel>
        <relationshipName>Resource_Timecard_Transmissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Resource Transmission</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Resource Transmission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Transmissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>